# sphinxcontrib-citations

./: README.md  pyproject.toml
.github/workflows/: test.yml
sphinxcontrib/citations/: __init__.py  core.py
tests/: test_core.py
