[tool.poetry]
name = "sphinxcontrib-citations"
version = "0.2.0"
description = "Create a list with all the papers that cite yours"
authors = ["Gabriele Bozzola <sbozzolator@gmail.com>"]
packages = [ {include = "sphinxcontrib", from = "."} ]
readme = "README.md"
homepage = "https://github.com/sbozzolo/sphinx-citations"
repository = "https://github.com/sbozzolo/sphinx-citations"
documentation = "https://sbozzolo.github.io/sphinx-citations"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.0"
Sphinx = ">=4.0"
sphinxcontrib-bibtex = "^2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
types-requests = "^2.28.11.5"
isort = "^5.10.1"
flake8 = ">=5.0.0"
pytest = ">=5.0.0"

[tool.pytest.ini_options]
pythonpath = [
  "sphinxcontrib"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
